<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.romanenco.sensorlog.MainActivity$PlaceholderFragment" >

    <Switch
        android:id="@+id/switch_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/logging_on_off" />

    <EditText
        android:id="@+id/marker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/switch_on_off"
        android:layout_below="@+id/switch_on_off"
        android:layout_marginTop="30dp"
        android:hint="@string/marker_hint_text"
        android:ems="10" />

    <Button
        android:id="@+id/mark_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marker_text"
        android:layout_centerHorizontal="true"
        android:text="@string/mark_it" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark_it"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/never_flushed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/mark_walk_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/status"
        android:layout_below="@+id/status"
        android:layout_marginTop="20dp"
        android:text="@string/mark_it_walk_start" />

    <Button
        android:id="@+id/mark_walk_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mark_walk_start"
        android:layout_below="@+id/mark_walk_start"
        android:layout_marginTop="17dp"
        android:text="@string/mark_it_walk_stop" />

</RelativeLayout>
